feat: added a function that generates table timings and their heights

--- a/src/schedule.module.css
+++ b/src/schedule.module.css
@@ -24,7 +24,12 @@
   align-items: center;
   width: 100%;
 }
+.bold {
+  font-weight: 500;
+  font-size: 15px;
+}
 .course > p {
+  width: 80%;
   color: white;
   font-weight: 300;
 }
