--- a/src/schedule.module.css
+++ b/src/schedule.module.css
@@ -46,7 +46,9 @@
   display: flex;
   align-items: center;
   width: 100%;
-  border: 1px solid #6c757d;
+  border-left: 1px solid #6c757d;
+  border-right: 1px solid #6c757d;
+  border-top: 1px solid #6c757d;
 }
 .bottom {
   width: 1085px;
